tests/errors/syntax_errors/yield.py

def get_one():
    yield 1
